launcher 2.0 with builder API